Fixed flash message spacing

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -14,3 +14,7 @@ body {
 	text-rendering: optimizeLegibility;
 }
 
+.flashes{
+	margin-bottom:1.5em;
+	margin-top:1.5em;
+}
